@@ -4,10 +4,13 @@
 package net.sourceforge.pmd.cpd;
 
 import java.io.FilenameFilter;
+import java.util.Properties;
 
 public interface Language {
 
     Tokenizer getTokenizer();
 
     FilenameFilter getFileFilter();
+
+    void setProperties(Properties properties);
 }
